--- a/templates/caretaker_dashboard.html
+++ b/templates/caretaker_dashboard.html
@@ -330,6 +330,9 @@
                 </div>
                 <div class="card-body p-3">
                     <div class="d-grid gap-2">
+                        <a href="/admin/payments" class="btn btn-success">
+                            <i class="fas fa-receipt me-2"></i>View All Payments
+                        </a>
                         <a href="/admin/help-requests" class="btn btn-warning">
                             <i class="fas fa-tools me-2"></i>Manage Help Requests
                         </a>
